--- a/pages1.html
+++ b/pages1.html
@@ -23,7 +23,7 @@
   
 </head>
 <body>
-  <link rel="stylesheet" href="style.less" class="cid-rd0tPO1fQj" id="menu1-n" data-rv-view="174"><section class="menu cid-rd0tPO1fQj" once="menu" id="menu1-n">
+  <link rel="stylesheet" href="style.less" class="cid-rd0tPO1fQj" id="menu1-n" data-rv-view="317"><section class="menu cid-rd0tPO1fQj" once="menu" id="menu1-n">
 
     
 
@@ -54,7 +54,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/h">how to create a web page</a></section><section class="mbr-section content4 cid-rd0zKpRCiB" id="content4-p">
+<section class="engine"><a href="https://mobirise.info/d">web maker</a></section><section class="mbr-section content4 cid-rd0zKpRCiB" id="content4-p">
 
     
 
@@ -98,6 +98,6 @@
   <script src="assets/theme/js/script.js"></script>
   
   
-<input name="cookieData" type="hidden" data-cookie-text="يتم حفظ سجلات الكوكيز لضمان امان المستخدم ومنحه تجربة لا مثيل لها</a>.">
+<input name="cookieData" type="hidden" data-cookie-text="يتم حفظ سجلات الكوكيز لضمان امان المستخدم ومنحه تجربة لا مثيل لها">
   </body>
 </html>
